[#169] Fix scroll issue on iOS when using modals

--- a/src/client/defaults.scss
+++ b/src/client/defaults.scss
@@ -12,6 +12,11 @@
   padding: 0;
 }
 
+html {
+  overflow: scroll;
+  -webkit-overflow-scrolling: touch;
+}
+
 html,
 body {
   background: $light-grey;
